# espeleo_2d_exploration

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: 2d_exploration.launch  2d_exploration_nav.launch  gmapping.launch
launch/nav/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
msg/: Frontier.msg  FrontierArray.msg
rviz/: config_exploration.rviz  config_exploration_ec.rviz
scripts/: closest_point.py  send_nav_goal.py  tf_pose.py
src/: espeleo_2d_exploration_nav.cpp  espeleo_2d_exploration_node.cpp  espeleo_2d_exploration_node_espeleo_control.cpp  frontier_publisher_node.cpp  map_info.cpp  measure_distance.cpp  send_nav_goal.py  wavefront_frontier_detection.cpp
