<?xml version="1.0"?>
<package format="2">
  <name>espeleo_2d_exploration</name>
  <version>0.0.0</version>
  <description>The espeleo_2d_exploration package</description>

  <maintainer email="lucca.leao98@gmail.com">lucca</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/espeleo_2d_exploration</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>espeleo_vrep_simulation</build_depend>
  <build_depend>espeleo_control</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>espeleo_vrep_simulation</build_export_depend>
  <build_export_depend>espeleo_control</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>espeleo_vrep_simulation</exec_depend>
  <exec_depend>espeleo_control</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
